<resources>
    <string name="app_name">羊皮书</string>
    <string name="parchment">羊皮书</string>
    <string name="skip">跳过</string>
    <string name="enter">进入</string>
    <string name="welcome" >Welcome</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="register_now">立即注册</string>
    <string name="login_now">立即登录</string>
    <string name="login_error_msg">账号或密码错误</string>
    <string name="login_error_title">登录失败</string>
    <string name="confirm">确定</string>
    <string name="login_retry_msg">请检查网络或稍后重试</string>
    <string name="logining">登录中...</string>


    <string name="action_settings">Settings</string>
        <string name="action_search">Search</string>
        <string name="drawer_open">Open</string>
        <string name="drawer_close">Close</string>
     
        <string name="nav_item_home">Home</string>
        <string name="nav_item_friends">Friends</string>
        <string name="nav_item_notifications">Messages</string>
     
        <!-- navigation drawer item labels  -->
        <string-array name="nav_drawer_labels">
            <item>@string/nav_item_home</item>
            <item>@string/nav_item_friends</item>
            <item>@string/nav_item_notifications</item>
        </string-array>
     
        <string name="title_messages">Messages</string>
        <string name="title_friends">Friends</string>
        <string name="title_home">Home</string>

</resources>
