<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_bg"
    android:clipToPadding="false"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="@dimen/large" />

        <EditText
            android:id="@+id/activity_login_account_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp46"
            android:layout_marginLeft="@dimen/dp40"
            android:layout_marginRight="@dimen/dp40"
            android:layout_marginTop="@dimen/dp60"
            android:background="@drawable/shape_edittext_selector"
            android:hint="@string/account"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/normal" />

        <EditText
            android:id="@+id/activity_login_password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp46"
            android:layout_marginLeft="@dimen/dp40"
            android:layout_marginRight="@dimen/dp40"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/shape_edittext_selector"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:password="true"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/normal" />

        <Button
            android:id="@+id/activity_login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp46"
            android:layout_marginLeft="@dimen/dp40"
            android:layout_marginRight="@dimen/dp40"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/shape_button_bg"
            android:text="@string/login_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp6"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_login_forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp6"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small" />

            <TextView
                android:id="@+id/activity_login_register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp6"
                android:text="@string/register_now"
                android:textColor="@android:color/white"
                android:textSize="@dimen/small" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
